# airbyte

.github/actions/run-airbyte-ci/: action.yml
airbyte-cdk/bulk/core/extract/src/main/kotlin/io/airbyte/cdk/read/: FeedReader.kt
airbyte-ci/connectors/base_images/: README.md
airbyte-ci/connectors/base_images/base_images/: bases.py  sanity_checks.py
airbyte-ci/connectors/pipelines/pipelines/airbyte_ci/connectors/build_image/steps/: python_connectors.py
airbyte-ci/connectors/pipelines/pipelines/dagger/containers/: java.py
airbyte-integrations/connectors/destination-s3-v2/: build.gradle  metadata.yaml
airbyte-integrations/connectors/destination-s3-v2/src/main/kotlin/: S3V2Configuration.kt  S3V2Specification.kt
airbyte-integrations/connectors/destination-s3-v2/src/test-integration/resources/: expected-spec-oss.json
airbyte-integrations/connectors/source-boostai/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-boostai/integration_tests/: configured_catalog.json  sample_state.json
airbyte-integrations/connectors/source-boostai/source_boostai/: __init__.py  cowsay.py  manifest.yaml  run.py  scratch.py  source.py  test_cowsay.py
airbyte-integrations/connectors/source-boostai/source_boostai/schemas/: TODO.md
airbyte-integrations/connectors/source-declarative-manifest/: pyproject.toml
airbyte-integrations/connectors/source-mssql/: build.gradle
airbyte-integrations/connectors/source-tmdb/: metadata.yaml
docs/integrations/sources/: tmdb.md
(+41 files in other folders)
